--- a/hospital-front/package.json
+++ b/hospital-front/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "date-fns": "^2.30.0",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
